package com.firstclub.membership.domain.enums;

public enum MembershipStatus {
	ACTIVE,
	CANCELLED,
	EXPIRED
}
